# mistral-ocr-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
mistral_ocr/: __init__.py  __main__.py  cli.py  config.py  processor.py  utils.py
tests/: __init__.py  test_cli.py  test_cli_overrides.py  test_concurrent.py  test_config.py  test_import.py  test_markdown_output.py  test_pdf_chunking.py  test_pdf_processing.py  test_processor.py  test_retries.py  test_retry.py  test_save_results.py  test_utils.py
