[project]
name = "mistral-ocr-cli"
version = "1.2.0"
description = "A clean command-line tool for OCR processing using Mistral AI's API"
authors = [{name = "Ruben Fernandez-Fuertes", email = "fernandezfuertesruben@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ocr", "mistral", "pdf", "cli", "command-line", "document-processing", "text-extraction", "image-processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mistralai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "Pillow>=11.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
mistral-ocr = "mistral_ocr.cli:main"

[project.urls]
Homepage = "https://github.com/r-uben/mistral-ocr-cli"
Repository = "https://github.com/r-uben/mistral-ocr-cli"
Issues = "https://github.com/r-uben/mistral-ocr-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mistral_ocr"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "SIM108"]

[tool.pytest.ini_options]
addopts = "--cov=mistral_ocr --cov-report=term-missing --no-header -q"

[tool.coverage.run]
source = ["mistral_ocr"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise RuntimeError",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
